Sponsored Tag on article listings

--- a/mainsite/static/www/css/_vars.scss
+++ b/mainsite/static/www/css/_vars.scss
@@ -2,6 +2,7 @@
 $col-white:       white;
 $col-red:         red;
 $col-redtext:     #c63604;
+$col-speyellow:   #FDD017;
 
 /* greys */
 $col-darkgrey:    #37373a;
