--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below_full.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below_full.html
@@ -12,6 +12,9 @@
                 <div class="story-text">
                     <span class="pub-date">{{ article.date }}</span>
                     <h3>{{ article.title }}</h3>
+                    {% if article.sponsored %}
+                    <p><span class="sponsored">SPONSORED</span></p>
+                    {% endif %}
                     <p>{{ article.teaser }}</p>
                 </div>
             </div>
