--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -17,6 +17,8 @@ h1, h2, h3, h4 { font-family: "proxima-nova", sans-serif; font-weight: 700; }
 
 .container-fluid { padding: 0; }
 
+a:hover { text-decoration: none; }
+
 /* ************************ */
 /* HEAD FOOT & CONTENT      */
 /* =================================================================== */
@@ -381,3 +383,5 @@ h1, h2, h3, h4 { font-family: "proxima-nova", sans-serif; font-weight: 700; }
 .padZero { padding: 0; }
 
 .margZero { margin: 0; }
+
+.sponsored { padding: 3px 3px 3px 5px; background-color: #fffb22; color: #2a2a2a; font-weight: 700; font-size: 12px; letter-spacing: 2px; }
