--- a/mainsite/static/ogf/css/mainstyle.scss
+++ b/mainsite/static/ogf/css/mainstyle.scss
@@ -25,6 +25,11 @@ h1, h2, h3, h4 {
 .container-fluid {
   padding:                0;
 }
+a {
+  &:hover {
+    text-decoration:      none;
+  }
+}
 
 /* ************************ */
 /* HEAD FOOT & CONTENT      */
@@ -62,4 +67,12 @@ h1, h2, h3, h4 {
 }
 .margZero {
   margin:             0;
+}
+.sponsored {
+  padding:            3px 3px 3px 5px;
+  background-color:   $col-ogfyellow;
+  color:              $col-ogfblack;
+  font-weight:        $font-bold;
+  font-size:          12px;
+  letter-spacing:     2px;
 }
