--- a/spe_blog/templates/spe_blog/plugins/image_left.html
+++ b/spe_blog/templates/spe_blog/plugins/image_left.html
@@ -14,6 +14,9 @@
             <div class="story-text col-sm-6">
                 <span class="pub-date">{{ article.date }}</span>
                 <h3>{{ article.title }}</h3>
+                {% if article.sponsored %}
+                <p><span class="sponsored">SPONSORED</span></p>
+                {% endif %}
                 <p>{{ article.teaser }}</p>
             </div>
         </div>
