changed the base template name

--- a/mainsite/templates/test.html
+++ b/mainsite/templates/test.html
@@ -1,4 +1,4 @@
-{% extends "spe_base.html" %}
+{% extends "www_base.html" %}
 {% load cms_tags sekizai_tags %}
 
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
