my latests stuffs

--- a/mainsite/templates/html5_bootstrap.html
+++ b/mainsite/templates/html5_bootstrap.html
@@ -1,5 +1,5 @@
 {% extends "html5.html" %}
-{% load staticfiles %}
+{% load staticfiles cms_tags sekizai_tags %}
 {% block plugs_apps %}
 
     <script src="{% static 'js/jquery/jquery-1.12.0.min.js' %}"></script>
