--- a/spe_blog/templates/spe_blog/plugins/carousel.html
+++ b/spe_blog/templates/spe_blog/plugins/carousel.html
@@ -18,19 +18,23 @@
           {% if article.picture and article.picture.url %}
               {% if forloop.first %}
                   <div class="item active">
-                      <img src={{ article.picture.url }}>
-                      <div class="carousel-caption">
-                          <h3>{{ article.title }}</h3>
-                          <h4>{{ article.teaser }}</h4>
-                      </div>
+                      <a href="{{ article.get_absolute_url }}" target="_blank">
+                          <img src={{ article.picture.url }}>
+                          <div class="carousel-caption">
+                              <h3>{{ article.title }}</h3>
+                              <h4>{{ article.teaser }}</h4>
+                          </div>
+                      </a>
                   </div>
               {% else %}
                   <div class="item">
-                      <img src={{ article.picture.url }}>
-                      <div class="carousel-caption">
-                          <h3>{{ article.title }}</h3>
-                          <h4>{{ article.teaser }}</h4>
-                      </div>
+                      <a href="{{ article.get_absolute_url }}" target="_blank">
+                          <img src={{ article.picture.url }}>
+                          <div class="carousel-caption">
+                              <h3>{{ article.title }}</h3>
+                              <h4>{{ article.teaser }}</h4>
+                          </div>
+                      </a>
                   </div>
               {% endif %}
           {% endif %}
