--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -1,4 +1,5 @@
 {% extends "html5_bootstrap.html" %}
+{% load cms_tags sekizai_tags %}
 
 {% block web_fonts %}
 {{ block.super }}
@@ -16,11 +17,10 @@
 
 {% block content_header %}
     <!-- HEADER Begin -->
-        <div class="row adZone1">
+        <div class="row adZone1" id="adZone1">
             <div class="col-md-12 text-center" id="adLeaderboard">
-{#                <img id="adLeaderboardImg" src="http://dummyimage.com/728x90/591c59/703870.png&text=800+x+600+AdZone1" class="img-responsive">#}
                 <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 1 728x90 [Any Dimension] -->
-                <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79084&oid=7699&wd=-1&ht=-1&target=_blank"></script>
+                <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79084&oid=7699&wd=-1&ht=-1&target=_blank&noerror=1"></script>
                 <!-- AdSpeed.com End -->
             </div>
         </div>
@@ -145,6 +145,27 @@
         </ul>
     </div>
     <!-- FOOTER END -->
+        <!-- div id="testmessage">REPLACE THIS</div -->
+
+    {% addtoblock "js" %}
+        <script type="text/javascript" charset="utf-8">
+            $( document ).ready(function() {
+
+{#                $("#testmessage").text("BEEN REPLACED");#}
+
+                if ($("#adLeaderboard").find("img").length > 0) {
+                    //do something
+{#                    $("#adZone1").text("HAS IMAGE");#}
+                } else {
+                    // do something else
+                    $("#adZone1").hide(0);
+                }
+
+            });
+        </script>
+    {%  endaddtoblock %}
+
 {% endblock content_footer %}
+
 
 
