--- a/spe_blog/templates/spe_blog/detail.html
+++ b/spe_blog/templates/spe_blog/detail.html
@@ -1,15 +1,50 @@
 {% extends base_template %}
+{% load cms_tags sekizai_tags %}
 
 {% block content %}
-<p>{{ base_template }}</p>
-<p>Detail</p>
-<h1>{{ article.title }}</h1>
-<img src={{article.picture.url}} class="img-rounded" alt={{article.alternate}} width="600" height="400">
-<h2>by: {{ article.author }}</h2>
-<h3>{{ article.date }}</h3>
-{{ article.article_text | safe }}
+    <div class="row adRow2" id="adRow2">
+        <div class="col-xs-12 adZone2 text-center" id="adZone2">
+            <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 2 1160x60 [Any Dimension] -->
+            <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank"></script>
+            <!-- AdSpeed.com End -->
+        </div>
+    </div>
+    <div class="row content-area articleContent">
+        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
+            <h1>{{ article.title }}</h1>
+            <img src={{article.picture.url}} class="img-rounded" alt={{article.alternate}} width="600" height="400">
+            <h2>by: {{ article.author }}</h2>
+            <h3>{{ article.date }}</h3>
+            {{ article.article_text | safe }}
 
-{% if article.publication.code != "WWW" %}
-    {% include "spe_blog/plugins/issue_sidebar.html" %}
-{% endif %}
+            {% if article.publication.code != "WWW" %}
+                {% include "spe_blog/plugins/issue_sidebar.html" %}
+            {% endif %}
+        </div>
+        <div class="col-sm-4 col-lg-3 areaRightSide">
+{#            {% placeholder "aside" %}#}
+{#            {% placeholder "additional-content" %}#}
+        </div>
+    </div>
+
+    {% include 'z_boostrap_size_indicator.html' %}
+
+    {% addtoblock "js" %}
+        <script type="text/javascript" charset="utf-8">
+            $( document ).ready(function() {
+
+{#                $("#testmessage").text("BEEN REPLACED");#}
+
+                if ($("#adZone2").find("img").length > 0) {
+                    //do something
+{#                    $("#adZone1").text("HAS IMAGE");#}
+                } else {
+                    // do something else
+                    $("#adRow2").hide(0);
+                }
+
+            });
+        </script>
+    {%  endaddtoblock %}
+
 {% endblock content %}
