Meeting by You Update
First version of Meetings by You plugin which uses the Meeting
personalized.

--- a/spe_blog/templates/spe_blog/plugins/location.html
+++ b/spe_blog/templates/spe_blog/plugins/location.html
@@ -5,4 +5,5 @@
     <p>Country Code (3): {{ location.country_code3 }}</p>
     <p>Latitude: {{ location.latitude }}</p>
     <p>Longitude: {{ location.longitude }}</p>
+    <p>Meetings: {{ meetings }}</p>
 </div>
