--- a/spe_blog/templates/spe_blog/issues.html
+++ b/spe_blog/templates/spe_blog/issues.html
@@ -1,31 +1,133 @@
-{% extends "base.html" %}
+{% extends "ogf_base.html" %}
+{% load cms_tags sekizai_tags %}
 
 {% block content %}
-    {% for issue in issues %}
-    <article class="tile whiteback story"
-                style="min-height: 150px">
-    <a href="{{ issue.issue_url }}" target="_blank">
-        <div class="story-wrap">
-                <figure class="thumb" style="max-width:200px;">
-                    <div class="img-wrap"><img src="{{ issue.cover.url }}" style="max-height:150px;max-width: 200px"/></div>
-                </figure>
-            <div class="story-text">
-                <span class="pub-date">{{ issue.date }}</span>
-                <span>Volume: {{ issue.print_volume }}</span>
-                <span>Issue: {{ issue.print_issue }}</span>
+
+    <div class="row adRow2" id="adRow2">
+        <div class="col-xs-12 adZone2 text-center" id="adZone2">
+            <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 2 1160x60 [Any Dimension] -->
+            <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank"></script>
+            <!-- AdSpeed.com End -->
+        </div>
+    </div>
+    <div class="row content-area articleContent">
+
+
+        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
+            <h1>MAGAZINE ARCHIVE</h1>
+
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+
+                {% for issue in issues %}
+                    {% if forloop.first %}
+{#                        <div class="row issuebar" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">#}
+                        <div class="row issuebar" data-toggle="collapse" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
+                            <hr class="tiletitlehr">
+                            <h1 class="tiletitles">{{ issue.date.year }}</h1>
+                        </div>
+                        <div id="collapse{{ issue.date.year }}" class="panel-collapse collapse in row">
+                    {% else %}
+                        {% ifchanged issue.date.year %}
+                            </div>
+{#                            <div class="row issuebar" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">#}
+                            <div class="row issuebar" data-toggle="collapse" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
+                                <hr class="tiletitlehr">
+                                <h1 class="tiletitles">{{ issue.date.year }}</h1>
+                            </div>
+                            <div id="collapse{{ issue.date.year }}" class="panel-collapse collapse row">
+                        {% endifchanged %}
+                    {% endif %}
+                        <div class="col-sm-4 issueItem text-center">
+                            <a href="{{ issue.issue_url }}" class="issueLink" target="_blank">
+                                <img src="{{ issue.cover.url }}" class="img-responsive">
+                                <p class="issueDate">{{ issue.date }}</p>
+                                <p class="issueVolNum">Volume {{ issue.print_volume }} | Number {{ issue.print_issue }}</p>
+                            </a>
+                        </div>
+                    {% if forloop.last %}</div>{% endif %}
+                {% endfor %}
+                </div>
             </div>
         </div>
-    </a>
-    </article>
-    {#    {% endif %}#}
-    {% empty %}
-        <p class="well">No issues available</p>
-    {% endfor %}
 
-    {% if show_all_url and show_all_text %}
-        <a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a>
-    {% endif %}
 
-{% include "spe_blog/plugins/issue_sidebar.html" %}
+{#            {% for issue in issues %}#}
+{#                {% if forloop.first %}#}
+{#                    <div class="row">#}
+{#                {% else %}#}
+{#                    {% ifchanged issue.date.year %}#}
+{#                        </div>#}
+{#                        <div class="row>">#}
+{#                    {% endifchanged %}#}
+{#                {% endif %}#}
+{#                    <div class="col-md-2">{{ issue.date.year }}</div>#}
+{#                {% if forloop.last %}</div>{% endif %}#}
+{#            {% endfor %}#}
+
+
+{#        <div class="row">#}
+{##}
+{#            {% for issue in issues %}#}
+{#                <article class="col-xs-6 col-sm-4" style="min-height: 150px">#}
+{#                <a href="{{ issue.issue_url }}" target="_blank">#}
+{#                    <div class="story-wrap">#}
+{#                            <figure class="thumb" style="max-width:200px;">#}
+{#                                <div class="img-wrap"><img src="{{ issue.cover.url }}" style="max-height:150px;max-width: 200px"/></div>#}
+{#                            </figure>#}
+{#                        <div class="story-text">#}
+{#                            <span class="pub-date">{{ issue.date }}</span>#}
+{#                            <span>Volume: {{ issue.print_volume }}</span>#}
+{#                            <span>Issue: {{ issue.print_issue }}</span>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </a>#}
+{#                </article>#}
+{#                {% empty %}#}
+{#                    <p class="well">No issues available</p>#}
+{#            {% endfor %}#}
+{##}
+{#        </div>#}
+
+{#            {% if show_all_url and show_all_text %}#}
+{#                <a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a>#}
+{#            {% endif %}#}
+
+        </div>
+
+
+
+        <div class="col-sm-4 col-lg-3 areaRightSide">
+
+            <div class="row">
+                <hr class="tiletitlehr">
+                <h1 class="tiletitles">CURRENT ISSUE</h1>
+            </div>
+
+            {% if article.publication.code != "WWW" %}
+                {% include "spe_blog/plugins/issue_sidebar.html" %}
+            {% endif %}
+        </div>
+    </div>
+
+    {% include 'z_boostrap_size_indicator.html' %}
+
+    {% addtoblock "js" %}
+        <script type="text/javascript" charset="utf-8">
+            $( document ).ready(function() {
+
+                if ($("#adZone2").find("img").length > 0) {
+                    //do something
+                } else {
+                    // do something else
+                    $("#adRow2").hide(0);
+                }
+
+            });
+        </script>
+    {%  endaddtoblock %}
+
+
+
 
 {% endblock content %}
