--- a/spe_blog/templates/spe_blog/detail.html
+++ b/spe_blog/templates/spe_blog/detail.html
@@ -12,18 +12,25 @@
     <div class="row content-area articleContent">
         <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
             <h1>{{ article.title }}</h1>
+
+        {% if article.picture and article.picture.url %}
             <img src={{article.picture.url}} class="img-rounded" alt={{article.alternate}} width="600" height="400">
+        {% endif %}
+
             <h2>by: {{ article.author }}</h2>
             <h3>{{ article.date }}</h3>
             {{ article.article_text | safe }}
+        </div>
+        <div class="col-sm-4 col-lg-3 areaRightSide">
+
+            <div class="row">
+                <hr class="tiletitlehr">
+                <h1 class="tiletitles">CURRENT ISSUE</h1>
+            </div>
 
             {% if article.publication.code != "WWW" %}
                 {% include "spe_blog/plugins/issue_sidebar.html" %}
             {% endif %}
-        </div>
-        <div class="col-sm-4 col-lg-3 areaRightSide">
-{#            {% placeholder "aside" %}#}
-{#            {% placeholder "additional-content" %}#}
         </div>
     </div>
 
@@ -33,11 +40,8 @@
         <script type="text/javascript" charset="utf-8">
             $( document ).ready(function() {
 
-{#                $("#testmessage").text("BEEN REPLACED");#}
-
                 if ($("#adZone2").find("img").length > 0) {
                     //do something
-{#                    $("#adZone1").text("HAS IMAGE");#}
                 } else {
                     // do something else
                     $("#adRow2").hide(0);
