Cleanup - Breadcrumb Template

--- a/spe_blog/templates/spe_blog/plugins/bread_crumb.html
+++ b/spe_blog/templates/spe_blog/plugins/bread_crumb.html
@@ -3,5 +3,9 @@
 <div>
     <p><strong>{{ title }}</strong></p>
     <p></p>
+<ul>
+    {% block breadcrumb %}
     {% show_breadcrumb %}
+    {% endblock %}
+<ul>
 </div>
