--- a/spe_blog/templates/spe_blog/issues.html
+++ b/spe_blog/templates/spe_blog/issues.html
@@ -1,4 +1,4 @@
-{% extends "ogf_base.html" %}
+{% extends base_template %}
 {% load cms_tags sekizai_tags %}
 
 {% block content %}
@@ -16,13 +16,14 @@
         <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
             <h1>MAGAZINE ARCHIVE</h1>
 
+        <!-- ISSUES BY YEAR ACCORDION BEGIN -->
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
 
                 {% for issue in issues %}
                     {% if forloop.first %}
-{#                        <div class="row issuebar" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">#}
-                        <div class="row issuebar" data-toggle="collapse" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
+                        <div class="row issuebar" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
+{#                        <div class="row issuebar" data-toggle="collapse" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">#}
                             <hr class="tiletitlehr">
                             <h1 class="tiletitles">{{ issue.date.year }}</h1>
                         </div>
@@ -30,8 +31,8 @@
                     {% else %}
                         {% ifchanged issue.date.year %}
                             </div>
-{#                            <div class="row issuebar" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">#}
-                            <div class="row issuebar" data-toggle="collapse" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
+                            <div class="row issuebar" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
+{#                            <div class="row issuebar" data-toggle="collapse" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">#}
                                 <hr class="tiletitlehr">
                                 <h1 class="tiletitles">{{ issue.date.year }}</h1>
                             </div>
@@ -49,53 +50,9 @@
                 {% endfor %}
                 </div>
             </div>
-        </div>
-
-
-{#            {% for issue in issues %}#}
-{#                {% if forloop.first %}#}
-{#                    <div class="row">#}
-{#                {% else %}#}
-{#                    {% ifchanged issue.date.year %}#}
-{#                        </div>#}
-{#                        <div class="row>">#}
-{#                    {% endifchanged %}#}
-{#                {% endif %}#}
-{#                    <div class="col-md-2">{{ issue.date.year }}</div>#}
-{#                {% if forloop.last %}</div>{% endif %}#}
-{#            {% endfor %}#}
-
-
-{#        <div class="row">#}
-{##}
-{#            {% for issue in issues %}#}
-{#                <article class="col-xs-6 col-sm-4" style="min-height: 150px">#}
-{#                <a href="{{ issue.issue_url }}" target="_blank">#}
-{#                    <div class="story-wrap">#}
-{#                            <figure class="thumb" style="max-width:200px;">#}
-{#                                <div class="img-wrap"><img src="{{ issue.cover.url }}" style="max-height:150px;max-width: 200px"/></div>#}
-{#                            </figure>#}
-{#                        <div class="story-text">#}
-{#                            <span class="pub-date">{{ issue.date }}</span>#}
-{#                            <span>Volume: {{ issue.print_volume }}</span>#}
-{#                            <span>Issue: {{ issue.print_issue }}</span>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </a>#}
-{#                </article>#}
-{#                {% empty %}#}
-{#                    <p class="well">No issues available</p>#}
-{#            {% endfor %}#}
-{##}
-{#        </div>#}
-
-{#            {% if show_all_url and show_all_text %}#}
-{#                <a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a>#}
-{#            {% endif %}#}
+        <!-- ISSUES BY YEAR ACCORDION END -->
 
         </div>
-
-
 
         <div class="col-sm-4 col-lg-3 areaRightSide">
 
@@ -109,6 +66,10 @@
             {% endif %}
         </div>
     </div>
+
+
+
+
 
     {% include 'z_boostrap_size_indicator.html' %}
 
