JD's latest tweaks

--- a/spe_blog/templates/spe_blog/plugins/bread_crumb.html
+++ b/spe_blog/templates/spe_blog/plugins/bread_crumb.html
@@ -1,4 +1,4 @@
-{% load menu_tags %}
+{% load menu_tags i18n %}
 
 <div>
     <p><strong>{{ title }}</strong></p>
@@ -7,5 +7,6 @@
     {% block breadcrumb %}
     {% show_breadcrumb %}
     {% endblock %}
-<ul>
+</ul>
 </div>
+
