--- a/mainsite/static/ogf/css/_ogfheader.scss
+++ b/mainsite/static/ogf/css/_ogfheader.scss
@@ -100,8 +100,8 @@
     padding-top:        50px;
 
     img {
-      max-width:        300px;
-      height:           auto;
+      //max-width:        300px;
+      //height:           auto;
     }
   }
 
