--- a/mainsite/static/ogf/css/_ogfcontent.scss
+++ b/mainsite/static/ogf/css/_ogfcontent.scss
@@ -536,3 +536,53 @@
 .panel-default, .panel, .panel-collapse, .panel-group {
   border:none;
 }
+.articleDetail {
+  .articleTitle {
+    padding-bottom:20px;
+  }
+  .articleAuthorBox, .articleShares {
+    height:35px;
+    border-bottom:1px dotted $col-ogfblack;
+    margin-bottom:15px;
+    padding-right:0;
+    padding-left:0;
+  }
+  .articleAuthorBox {
+    font-size:12px;
+    font-weight: $font-bold;
+    padding-top: 10px;
+  }
+}
+.articlePicture {
+  margin-bottom:20px;
+}
+.articleBodyText {
+
+}
+.articleShares {
+  font-size: 18px;
+  padding-top: 5px;
+  .fa-facebook-square {
+    color: $col-fbShare;
+  }
+  .fa-twitter-square {
+    color: $col-twitShare;
+  }
+  .fa-linkedin-square {
+    color: $col-lInShare;
+  }
+  .fa-envelope-square {
+    color: $col-drkgrey;
+  }
+  .fa-plus-square {
+    color: $col-drkgrey;
+  }
+  .fa-facebook-square, .fa-twitter-square, .fa-linkedin-square, .fa-envelope-square, .fa-plus-square {
+    cursor: pointer;
+    padding:3px;
+    &:hover {
+      color: $col-white;
+      background-color:$col-hrblue;
+    }
+  }
+}
