--- a/mainsite/templates/ogf_subpage.html
+++ b/mainsite/templates/ogf_subpage.html
@@ -4,6 +4,13 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
+
+    <div class="col-xs-12 adZone2 text-center" id="adZone2">
+        <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 2 1160x60 [Any Dimension] -->
+        <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank"></script>
+        <!-- AdSpeed.com End -->
+    </div>
+
     <div class="row content-area">
         <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
             {% placeholder "notice" %}
@@ -15,6 +22,7 @@
         </div>
     </div>
 
+    {% include 'include_hide_ads.html' %}
     {% include 'z_boostrap_size_indicator.html' %}
 
 {% endblock content %}
