--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -1,32 +1,34 @@
 {% load cms_tags sekizai_tags %}
 
-    <div class="row content-area articleContent">
-        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
-            <h1>{{ article.title }}</h1>
+    <div class="row articleDetail">
+        <div class="col-sm-12 articleTitleBox">
+            <h1 class="articleTitle">{{ article.title }}</h1>
+            <div class="col-sm-12 tiletitlehr"></div>
+            <div class="col-sm-8 articleAuthorBox">
+                {{ article.author }} | {{ article.date }}
+            </div>
+            <div class="col-sm-4 articleShares text-right">
+                <a href="/"><i class="fa fa-facebook-square"></i></a>
+                <a href="/"><i class="fa fa-twitter-square"></i></a>
+                <a href="/"><i class="fa fa-linkedin-square"></i></a>
+                <a href="/"><i class="fa fa-envelope-square"></i></a>
+                <a href="/"><i class="fa fa-plus-square"></i></a>
+            </div>
+        </div>
 
-        {% if article.picture and article.picture.url %}
-            <img src={{article.picture.url}} class="img-rounded" alt={{article.alternate}} width="600" height="400">
-        {% endif %}
-
-            <h2>by: {{ article.author }}</h2>
-            <h3>{{ article.date }}</h3>
+    {% if article.picture and article.picture.url %}
+        <div class="col-sm-12 articlePicture">
+            <img src="{{article.picture.url}}" alt="{{article.alternate}}" class="img-responsive">
+        </div>
+    {% endif %}
+        <div class="col-sm-12 articleBodyText">
             {{ article.article_text | safe }}
         </div>
+        <div class="col-sm-12 articleShares text-left">
+            <a href="/"><i class="fa fa-facebook-square"></i></a>
+            <a href="/"><i class="fa fa-twitter-square"></i></a>
+            <a href="/"><i class="fa fa-linkedin-square"></i></a>
+            <a href="/"><i class="fa fa-envelope-square"></i></a>
+            <a href="/"><i class="fa fa-plus-square"></i></a>
+        </div>
     </div>
-
-    {% include 'z_boostrap_size_indicator.html' %}
-
-    {% addtoblock "js" %}
-        <script type="text/javascript" charset="utf-8">
-            $( document ).ready(function() {
-
-                if ($("#adZone2").find("img").length > 0) {
-                    //do something
-                } else {
-                    // do something else
-                    $("#adRow2").hide(0);
-                }
-
-            });
-        </script>
-    {%  endaddtoblock %}
