--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -52,7 +52,7 @@
 
         <div class="row" id="menubar">
             <div class="col-xs-12 col-sm-4 col-md-3 col-lg-offset-1" id="mainLogo">
-                <a href="/ogf/"><img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="img-responsive"></a>
+                <a href="/ogf/ogf-home/"><img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="img-responsive"></a>
             </div>
             <div class="col-md-8 col-lg-7 text-right">
                 <ul class="pubMenu">
