--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -8,13 +8,13 @@
                 {{ article.author }} | {{ article.date }}
             </div>
             <div class="col-sm-4 articleShares text-right">
-                <a href="/"><i class="fa fa-facebook-square"></i></a>
-                <a href="/"><i class="fa fa-twitter-square"></i></a>
-                <a href="/"><i class="fa fa-linkedin-square"></i></a>
-                <a href="/"><i class="fa fa-envelope-square"></i></a>
-                <a href="/"><i class="fa fa-plus-square"></i></a>
+                {% include 'include_article_shares.html' %}
             </div>
         </div>
+
+        {% if article.sponsored == True %}
+            <div class="col-sm-12 sponsored">SPONSORED</div>
+        {% endif %}
 
     {% if article.picture and article.picture.url %}
         <div class="col-sm-12 articlePicture">
@@ -22,13 +22,33 @@
         </div>
     {% endif %}
         <div class="col-sm-12 articleBodyText">
-            {{ article.article_text | safe }}
+
+
+            <p>Free: {{ article.free }}</p>
+            <p>Start Date: {{ article.free_start }}</p>
+            <p>End Date:
+                {% if article.free_stop %}
+                {{ article.free_stop }}
+                {% else %}
+                None
+                {% endif %}
+            </p>
+
+            {% if article.free == True %}
+                {{ article.article_text | safe }}
+            {% else %}
+                {{ article.introduction | safe }}
+                <div class="col-sm-12 becomeMember text-center">To read the rest of the article, please<br>
+                    <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a>
+                </div>
+            {% endif %}
+
+
+
+
+
         </div>
         <div class="col-sm-12 articleShares text-left">
-            <a href="/"><i class="fa fa-facebook-square"></i></a>
-            <a href="/"><i class="fa fa-twitter-square"></i></a>
-            <a href="/"><i class="fa fa-linkedin-square"></i></a>
-            <a href="/"><i class="fa fa-envelope-square"></i></a>
-            <a href="/"><i class="fa fa-plus-square"></i></a>
+            {% include 'include_article_shares.html' %}
         </div>
     </div>
