--- a/spe_blog/templates/spe_blog/plugins/image_left.html
+++ b/spe_blog/templates/spe_blog/plugins/image_left.html
@@ -1,14 +1,13 @@
 {% load i18n %}
 
 {% for article in articles %}
-{#    {% if instance.hide_featured and not article.is_featured %}#}
     <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
                 style="min-height: 150px">
-    <a href="{{ article.get_absolute_url }}" target="_blank">
+    <a href="{{ article.get_absolute_url }}">
         <div class="story-wrap row">
             {% if article.picture and article.picture.url %}
-                <figure class="thumb col-sm-6"><!-- style="max-width:200px;" -->
-                    <div class="img-wrap"><img src="{{ article.picture.url }}" class="img-responsive"/></div><!--  style="max-height:150px;max-width: 200px" -->
+                <figure class="thumb col-sm-6">
+                    <div class="img-wrap"><img src="{{ article.picture.url }}" class="img-responsive"/></div>
                 </figure>
                 <div class="story-text col-sm-6">
             {% else %}
@@ -24,7 +23,6 @@
         </div>
     </a>
     </article>
-{#    {% endif %}#}
 {% empty %}
     <p class="well">{% trans "No items available" %}</p>
 {% endfor %}
