--- a/spe_events/templates/spe_events/plugins/location.html
+++ b/spe_events/templates/spe_events/plugins/location.html
@@ -1,12 +1,47 @@
-<div>
-    <p>Events close to: {{ location.city }}, {{ location.country_name }}</p>
-    {% for event in events %}
-        <a href={{ event.url }}>
-        <p>Type: {{ event.type }}</p>
-        <p>Event: {{ event.name }}</p>
-        <p>Location: {{ event.location }}</p>
-        <p>Starting: {{ event.dt_begins }}</p>
-        <p>Ending: {{ event.dt_ends }}</P>
-        </a>
-    {% endfor %}
+{% load cms_tags sekizai_tags %}
+
+<div class="eventsNearYou">
+    <p class="locCurrent">Near to: <span class="locName">{{ location.city }}, {{ location.country_name }}</span></p>
+{% for event in events %}
+    <p class="eachEvent">
+        <a href="{{ event.url }}" class="eventName">Event: {{ event.name }}</a><br>
+        <span class="eventDetails">
+            <span class="eventType">{{ event.type }}</span><br>
+            in {{ event.location }}<br>
+{#            {% set datebegins  %}#}
+            <span id="dateBegin" class="date">{{ event.dt_begins }}</span> - <span id="dateEnd" class="date">{{ event.dt_ends }}</span>
+        </span>
+    </p>
+{% endfor %}
 </div>
+{#{{ value|date:'Y-m-d H:i' }}#}
+
+{% addtoblock "js" %}
+    <script type="text/javascript" charset="utf-8">
+        $( document ).ready(function() {
+
+            $('span.date').each(function() {
+                var dateFormat = $(this).text();
+                var d = new Date(dateFormat);
+                var curr_date = d.getDate();
+                var month = new Array();
+                    month[0] = "January";
+                    month[1] = "February";
+                    month[2] = "March";
+                    month[3] = "April";
+                    month[4] = "May";
+                    month[5] = "June";
+                    month[6] = "July";
+                    month[7] = "August";
+                    month[8] = "September";
+                    month[9] = "October";
+                    month[10] = "November";
+                    month[11] = "December";
+                var curr_month = month[d.getMonth()];
+                var curr_year = d.getFullYear();
+                $(this).text(curr_month+" "+curr_date+", "+curr_year);
+            });
+
+        });
+    </script>
+{%  endaddtoblock %}
